# OmniQ

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  HOW_TO_RUN.md  QUICKSTART.md  README.md  README_RUN.md  START_HERE.txt  demo_omniq.py  main  main.cpp  omniq  run_omniq.sh  simple_demo.py  test_algorithms.cpp  test_algorithms_simple  test_algorithms_simple.cpp  test_c_debugger.c  test_core.cpp  test_debugger.sh  test_debugger_access.py  test_python.py
.github/workflows/: ci.yml
Release/: LICENSE  omniq  omniq-0.1.0-py3-none-any.whl
build_debugger/: asa.txt  omniq-debugger
build_debugger/omniq-debugger_autogen/: deps  moc_predefs.h
build_debugger/omniq-debugger_autogen/RZ4CM6YYJ6/: moc_BlochSphereWidget.cpp  moc_BlochSphereWidget.cpp.d  moc_CircuitBuilder.cpp  moc_CircuitBuilder.cpp.d  moc_CircuitView.cpp  moc_CircuitView.cpp.d  moc_ClickableLabel.cpp  moc_ClickableLabel.cpp.d  moc_EntanglementGraphWidget.cpp  moc_EntanglementGraphWidget.cpp.d  moc_HilbertSpaceWidget.cpp  moc_HilbertSpaceWidget.cpp.d  moc_QuantumStateViewer.cpp  moc_QuantumStateViewer.cpp.d  moc_QubitViewer.cpp  moc_QubitViewer.cpp.d
build_debugger/omniq-debugger_autogen/UVLADIE3JM/: moc_CoreInterface.cpp  moc_CoreInterface.cpp.d  moc_MainWindow.cpp  moc_MainWindow.cpp.d
cmake/: OmniQConfig.cmake.in
libomniq-c/: CMakeLists.txt  build.sh
libomniq-c/cmake/: OmniQ-CConfig.cmake.in
libomniq-c/examples/: debugger_demo.c  debugger_demo.cpp
libomniq-c/include/: omniq_c.h
libomniq-c/src/: omniq_c.cpp
libomniq-core/: CMakeLists.txt
libomniq-core/cmake/: OmniQConfig.cmake.in
libomniq-core/include/omniq/: Circuit.h  DensityMatrix.h  Grovers.h  Operators.h  QPE.h  QuantumStates.h  Spectral.h  Statevector.h
libomniq-core/include/omniq/Debugger/: ExecutionEngine.h
libomniq-core/include/omniq/Noise/: AmplitudeDampingChannel.h  DepolarizingChannel.h  NoiseChannel.h  NoiseModel.h  PhaseDampingChannel.h
libomniq-core/include/omniq/QEC/: Decoder.h  MWPMDecoder.h  Stabilizer.h  SurfaceCode.h  Syndrome.h  UnionFindDecoder.h
libomniq-core/include/omniq/Simulators/: CliffordSimulator.h
libomniq-core/src/: bindings.cpp
libomniq-core/src/common/: Circuit.cpp  Circuit.h  DensityMatrix.cpp  DensityMatrix.h  Hamiltonian.cpp  Hamiltonian.h  NoiseModel.cpp  NoiseModel.h  Operators.cpp  Operators.h  QuantumStates.cpp  QuantumStates.h  Spectral.cpp  Statevector.cpp  Statevector.h
libomniq-core/src/debugger/: ExecutionEngine.cpp
libomniq-core/src/ml_helpers/onnx/: ONNX_Runtime_Interface.cpp  ONNX_Runtime_Interface.h
libomniq-core/src/ml_helpers/qec_decoders/: CNN_Decoder.cpp  CNN_Decoder.h  GNN_Decoder.cpp  GNN_Decoder.h
libomniq-core/src/ml_helpers/tomography/: GAN_Tomography.cpp  GAN_Tomography.h  VAE_Tomography.cpp  VAE_Tomography.h
libomniq-core/src/modules/algorithms/: Grovers.cpp  Grovers.h  HHL.cpp  HHL.h  QPE.cpp  QPE.h  Shors.cpp  Shors.h
libomniq-core/src/modules/chaos/: OTOC_Calculator.cpp  OTOC_Calculator.h
libomniq-core/src/modules/chem/: UCC_Ansatze.cpp  UCC_Ansatze.h  VQE_Backend.cpp  VQE_Backend.h  omniq.cu  omniq.cuh
libomniq-core/src/modules/noise/: AmplitudeDampingChannel.cpp  DepolarizingChannel.cpp  NoiseChannel.cpp  NoiseModel.cpp  PhaseDampingChannel.cpp
libomniq-core/src/modules/optimizers/: QAOA_Backend.cpp  QAOA_Backend.h
libomniq-core/src/modules/qec/: MWPMDecoder.cpp  MWPM_Decoder.cpp  MWPM_Decoder.h  Stabilizer.cpp  StabilizerCode.cpp  StabilizerCode.h  SteaneCode.cpp  SteaneCode.h  SurfaceCode.cpp  SurfaceCode.h  Syndrome.cpp  UnionFindDecoder.cpp
libomniq-core/src/modules/qml/: QML_Backend.cpp  QML_Backend.h  QML_Model.cpp  QML_Model.h  VariationalCircuit.cpp  VariationalCircuit.h
libomniq-core/src/simulators/clifford/: CliffordSimulator.cpp
libomniq-core/src/simulators/cpu/: DensityMatrixSimulator.cpp  DensityMatrixSimulator.h  StatevectorSimulator.cpp  StatevectorSimulator.h
libomniq-core/src/simulators/cuda/: CUDADevice.cpp  CUDADevice.h  CUDAStatevectorSimulator.cpp  CUDAStatevectorSimulator.h
libomniq-core/src/transpiler/: GateDecomposer.cpp  GateDecomposer.h  LayoutEngine.cpp  LayoutEngine.h  PassManager.cpp  PassManager.h  Transpiler.cpp  Transpiler.h
omniq-debugger/: CMakeLists.txt  DEMO_GUIDE.md  README.md  README_DEMO.md  build.sh  demo.py  test_debugger.py  test_functional_debugger.py  verify_demo.sh
omniq-debugger/build_release/omniq-debugger.app/Contents/: Info.plist
omniq-debugger/build_release/omniq-debugger.app/Contents/MacOS/: omniq-debugger
omniq-debugger/build_release/omniq-debugger_autogen/: deps  mocs_compilation.cpp
omniq-debugger/build_release/omniq-debugger_autogen/RZ4CM6YYJ6/: moc_BlochSphereWidget.cpp  moc_BlochSphereWidget.cpp.d  moc_CircuitBuilder.cpp  moc_CircuitBuilder.cpp.d  moc_CircuitView.cpp  moc_CircuitView.cpp.d  moc_ClickableLabel.cpp  moc_ClickableLabel.cpp.d  moc_EntanglementGraphWidget.cpp  moc_EntanglementGraphWidget.cpp.d  moc_HilbertSpaceWidget.cpp  moc_HilbertSpaceWidget.cpp.d  moc_QuantumStateViewer.cpp  moc_QuantumStateViewer.cpp.d  moc_QubitViewer.cpp  moc_QubitViewer.cpp.d
omniq-debugger/build_release/omniq-debugger_autogen/UVLADIE3JM/: moc_CoreInterface.cpp  moc_CoreInterface.cpp.d  moc_MainWindow.cpp  moc_MainWindow.cpp.d
omniq-debugger/src/: CoreInterface.cpp  CoreInterface.h  MainWindow.cpp  MainWindow.h  QuantumBackend.cpp  main.cpp
omniq-debugger/src/widgets/: BlochSphereWidget.cpp  BlochSphereWidget.h  CircuitBuilder.cpp  CircuitBuilder.h  CircuitView.cpp  CircuitView.h  ClickableLabel.cpp  ClickableLabel.h  EntanglementGraphWidget.cpp  EntanglementGraphWidget.h  HilbertSpaceWidget.cpp  HilbertSpaceWidget.h  QuantumStateViewer.cpp  QuantumStateViewer.h  QubitViewer.cpp  QubitViewer.h
omniq-python/: pyproject.toml
omniq-python/examples/: debugger_demo.py
omniq-python/omniq/: __init__.py  algorithms.py  circuit.py  crypto.py  debugger.py  device.py  noise.py  optimization.py  utils.py
omniq-python/omniq/_internals/: __init__.py
omniq-python/omniq/qml/: __init__.py  qml_model.py  variational_circuit.py
tests/: test_core.cpp
(+3 files in other folders)
